<resources>
    <string name="app_name">MyWalkinTime</string>

    <string name="GPS_permission">Grant GPS Permission</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disable_gps">Disable GPS</string>
    <string name="start_route">Start Route</string>
    <string name="stop_route">Stop Route</string>
    <string name="icon_content_description">App Icon</string>
    <string name="local_search">What do you want to find?</string>
    <string name="travelled_distance">Travelled Distance</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="no_gps_no_app">GPS access permission needed</string>
    <string name="started_chronometer">Route iniciated</string>
    <string name="stopped_chronometer">Route stopped</string>
    <string name="timer_on">Timer already on</string>
    <string name="permission_already_granted">Permission Already Granted</string>
    <string name="gps_already_activated">GPS Already Activated</string>
    <string name="gps_not_activated">GPS Not Activated</string>
    <string name="route_location_done">0 KM</string>
    <string name="no_gps_activation">GPS activation needed</string>
    <string name="no_route_iniciated">Route not iniciated</string>
   
</resources>
