<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:contentDescription="@string/icon_content_description"
        android:padding="@dimen/padding_imageview"
        app:srcCompat="@drawable/gpsmetericon" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/buttonsGridLayout"
        android:layout_width="381dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:columnCount="3"
        app:rowCount="2">


        <Button
            android:id="@+id/grantPermissionGpsButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:shadowColor="#FFFFFF"
            android:text="@string/GPS_permission"
            app:layout_columnSpan="3" />

        <Button
            android:id="@+id/enableGpsButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:text="@string/enable_gps" />

        <Button
            android:id="@+id/disableGpsButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:text="@string/disable_gps"
            app:layout_column="2" />

        <Button
            android:id="@+id/startRouteButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:text="@string/start_route" />

        <Button
            android:id="@+id/stopRouteButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:text="@string/stop_route"
            app:layout_column="2" />


    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/resultsGridLayout"
        android:layout_width="387dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        app:columnCount="2"
        app:rowCount="2">

        <TextView
            android:id="@+id/distanceDoneTextView"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_textview"
            android:text="@string/travelled_distance"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="@dimen/result_textview_layout_width"
            android:layout_height="wrap_content"
            android:text="@string/route_location_done" />

        <TextView
            android:id="@+id/timeElapsedTextView"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_textview"
            android:text="@string/elapsed_time" />

        <Chronometer
            android:id="@+id/elapsedTimeChronometer"
            android:layout_width="@dimen/result_textview_layout_width"
            android:layout_height="wrap_content" />
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="71dp"
        android:layout_gravity="end"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/localSearcheditText"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/local_search"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_textview" />
    </LinearLayout>

</LinearLayout>
